2019-02-06  Joseph Myers  <joseph@codesourcery.com>

	* elf/dl-load.h (_dl_postprocess_loadcmd): Use __always_inline
	before return type, without separate inline.
	* elf/dl-tunables.c (maybe_enable_malloc_check): Likewise.
	* elf/dl-tunables.h (tunable_is_name): Likewise.
	* malloc/malloc.c (do_set_trim_threshold): Likewise.
	(do_set_top_pad): Likewise.
	(do_set_mmap_threshold): Likewise.
	(do_set_mmaps_max): Likewise.
	(do_set_mallopt_check): Likewise.
	(do_set_perturb_byte): Likewise.
	(do_set_arena_test): Likewise.
	(do_set_arena_max): Likewise.
	(do_set_tcache_max): Likewise.
	(do_set_tcache_count): Likewise.
	(do_set_tcache_unsorted_limit): Likewise.
	* nis/nis_subr.c (count_dots): Likewise.
	* nptl/allocatestack.c (advise_stack_range): Likewise.
	* sysdeps/ieee754/dbl-64/s_sin.c (do_cos): Likewise.
	(do_sin): Likewise.
	(reduce_sincos): Likewise.
	(do_sincos): Likewise.
	* sysdeps/unix/sysv/linux/x86/elision-conf.c
	(do_set_elision_enable): Likewise.
	(TUNABLE_CALLBACK_FNDECL): Likewise.

2019-02-06  Florian Weimer  <fweimer@redhat.com>

	* support/xdlfcn.c (xdlopen, xdlclose): Do not call dlerror.
	(xdlsym): Use dlerror to detect a NULL symbol.

2019-02-06  Florian Weimer  <fweimer@redhat.com>

	* sysdeps/unix/sysv/linux/i386/lowlevellock.h: Do not include
	<stap-probe.h>.
	* sysdeps/unix/sysv/linux/x86_64/lowlevellock.h: Likewise.

2019-02-06  Stefan Liebler  <stli@linux.ibm.com>

	* libio/tst-bz24153.c (wide): Use wide char format specifier.

2019-02-06  Stefan Liebler  <stli@linux.ibm.com>

	* sysdeps/s390/wmemcmp-vx.S: Add strong alias to
	__wmemcmp and weak alias to wmemcmp.

2019-02-06  Stefan Liebler  <stli@linux.ibm.com>

	[BZ #23403]
	* nptl/allocatestack.c (allocate_stack): Align pointer pd for
	TLS_TCB_AT_TP tls variant.
	* nptl/tst-tls1.c: Migrate to support/test-driver.c.
	Add alignment checks.
	* support/Makefile (libsupport-routines): Add xposix_memalign and
	xpthread_setstack.
	* support/support.h: Add xposix_memalign.