@@ -81,6 +81,7 @@ libsupport-routines = \
   xconnect \
   xcopy_file_range \
   xdlfcn \
+  xdlmopen \
   xdup2 \
   xfclose \
   xfopen \
