@@ -1,4 +1,4 @@
-/* Support functionality for using dlopen/dlclose/dlsym.
+/* dlmopen with error checking.
    Copyright (C) 2017-2019 Free Software Foundation, Inc.
    This file is part of the GNU C Library.
 
@@ -16,19 +16,16 @@
    License along with the GNU C Library; if not, see
    <http://www.gnu.org/licenses/>.  */
 
-#ifndef SUPPORT_DLOPEN_H
-#define SUPPORT_DLOPEN_H
+#include <support/check.h>
+#include <support/xdlfcn.h>
 
-#include <dlfcn.h>
+void *
+xdlmopen (Lmid_t lmid, const char *filename, int flags)
+{
+  void *dso = dlmopen (lmid, filename, flags);
 
-__BEGIN_DECLS
+  if (dso == NULL)
+    FAIL_EXIT1 ("error: dlmopen: %s\n", dlerror ());
 
-/* Each of these terminates process on failure with relevant error message.  */
-void *xdlopen (const char *filename, int flags);
-void *xdlmopen (Lmid_t lmid, const char *filename, int flags);
-void *xdlsym (void *handle, const char *symbol);
-void xdlclose (void *handle);
-
-__END_DECLS
-
-#endif /* SUPPORT_DLOPEN_H */
+  return dso;
+}
