@@ -1,3 +1,9 @@
+2019-02-07  Florian Weimer  <fweimer@redhat.com>
+
+	* support/xdlfcn.h (xdlmopen): Declare.
+	* support/xdlmopen.c: New file.
+	* support/Makefile (libsupport-routines): Add xdlmopen.
+
 2019-02-06  Joseph Myers  <joseph@codesourcery.com>
 
 	* elf/dl-load.h (_dl_postprocess_loadcmd): Use __always_inline
